--- a/Acebook/Views/Users/Edit.cshtml
+++ b/Acebook/Views/Users/Edit.cshtml
@@ -30,6 +30,9 @@
         <div class="form-group">
             <input type="submit" value="Update" class="btn btn-primary" />
         </div>
+        <div>
+        <a href="@Url.Action("Index", "Friendships")" >Edit Friends</a>
+        </div>
     </fieldset>
 </form>
 
