--- a/Acebook/Views/Friendships/SendFriendRequest.cshtml
+++ b/Acebook/Views/Friendships/SendFriendRequest.cshtml
@@ -1,6 +1,6 @@
 
 <form action="@Url.Action("SendFriendRequest", "Friendships")" method="post">
-    <label for="receiverId">Enter Receiver's User ID:</label>
-    <input type="number" id="receiverId" name="receiverId" required />
+    <label for="receiverUsername">Send Friendships request to:</label>
+    <input type="text" id="receiverUsername" name="receiverUsername" required />
     <button class="friend-request-button" type="submit">Send Friend Request</button>
 </form>
