Updated Users Model

--- a/Acebook/Views/Users/Profile.cshtml
+++ b/Acebook/Views/Users/Profile.cshtml
@@ -56,7 +56,10 @@
             <p>No profile picture set.</p>
         }
         <h1 class="user-name-profile">@Model.Name</h1>
-        <a href="@Url.Action("Index", "Friendships")" class="btn btn-primary">Friends</a>
+        <p>About me</p>
+        <p class="user-bio-profile">@Model.Bio</p>
+        <p>Member since: @Model.JoinedDate.ToString("MMMM dd, yyyy")</p>
+        <a href="@Url.Action("Friends", new { username = Model.Name })" class="friends-link-profile">Friends</a>
     </div>
 @if (Context.Session.GetString("Username") == Model.Name)
 {
