--- a/Acebook/Views/Users/Edit.cshtml
+++ b/Acebook/Views/Users/Edit.cshtml
@@ -5,7 +5,12 @@
         <legend>Edit Profile Info</legend>
         <div asp-validation-summary="All" class="text-danger"></div>
         <div class="form-group">
-            <label asp-for="Name" class="control-label"></label>
+            <label class="control-label">Name</label>
+            <input asp-for="FullName" class="form-control" />
+            <span asp-validation-for="FullName" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label class="control-label">Username</label>
             <input asp-for="Name" class="form-control" />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
@@ -15,8 +20,22 @@
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
         <div class="form-group">
+            <label asp-for="Bio" class="control-label"></label>
+            <input asp-for="Bio" class="form-control" />
+            <span asp-validation-for="Bio" class="text-danger"></span>
+        </div>
+        <div class="form-group">
             <label>Upload Profile Picture</label>
             <input type="file" name="profilePictureFile" class="form-control" accept="image/*" />
+        </div>
+         <div class="form-group">
+            <label>Profile Privacy</label>
+            <div class="form-check">
+                <input asp-for="IsPrivate" class="form-check-input" type="checkbox" />
+                <label class="form-check-label" for="IsPrivate">
+                    Make my profile private
+                </label>
+            </div>
         </div>
 
         <div class="form-group">
@@ -29,9 +48,6 @@
         </div>
         <div class="form-group">
             <input type="submit" value="Update" class="btn btn-primary" />
-        </div>
-        <div>
-        <a href="@Url.Action("Index", "Friendships")" >Edit Friends</a>
         </div>
     </fieldset>
 </form>
