--- a/Acebook/Views/Users/New.cshtml
+++ b/Acebook/Views/Users/New.cshtml
@@ -6,7 +6,12 @@
         <legend>Create Account</legend>
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
-        <label asp-for="Name" class="control-label"></label>
+        <label class="control-label">Name</label>
+        <input asp-for="FullName" class="form-control" />
+        <span asp-validation-for="FullName" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label class="control-label">Username</label>
         <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
