Not complete, but started adding Like feature to individual post page and profile page.

--- a/Acebook/Views/Posts/GetPost.cshtml
+++ b/Acebook/Views/Posts/GetPost.cshtml
@@ -34,15 +34,32 @@
             <img src="@ViewBag.Post.PostImage" alt="Post Image" class="post-image" />
         }
         <p class="post-meta-date">Posted on: @ViewBag.Post.CreatedAt.ToString("dd MMM yyyy, HH:mm")</p>
-    </div>
-    <div class="reactions">
-        <div class="like-count">
-            <span>0</span> 
+
+    <div>
+        <div class="like-section">
+                @{
+                    var dictLikeUnlike = ViewBag.LikeUnlike as Dictionary<int, List<int>>;
+                }
+                <form method="post" asp-controller="Likes" asp-action="LikePost" asp-route-postId="@ViewBag.Post.Id">
+                    @{
+                        var likeOrUnlike =@ViewBag.PostLikeUnlike;
+                    }
+                    <button type="submit" class="btn btn-primary">@likeOrUnlike</button>
+                </form>
+                <div class="like-count">
+                    @{
+                        if (@ViewBag.PostLikesCount != null)
+                        { 
+                        <span>👍@ViewBag.PostLikesCount likes</span>
+                        }
+                        else{
+                            Console.WriteLine("@ViewBag.PostLikesCount is NULL");
+                        }
+                    }
+                </div>
         </div>
-        <div class="comment-count">
-            <span>0</span> 
-        </div>
     </div>
+</div>
 </div>
 <div class="posts-container-profile">
         <h2>Comments</h2>
